--- a/resource/css/profile.css
+++ b/resource/css/profile.css
@@ -35,7 +35,7 @@
 }
 
 /*input style*/
-input[type=text],input[type=text].valid, input[type=number] {
+input[type=text],input[type=text].valid, input[type=number],input[type=number].valid {
     border-bottom: none;
     box-shadow: none;
     margin-bottom:10px;
